# xai-ai-library

./: .gitignore  LICENSE  README.md  demosFromxAI.py  dev-requirements.txt  production_readiness.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
src/: .gitignore  __init__.py  handlerconfig.py  memory.py  personality.py  xaihandler.py
src/xai_ai_library.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/xaihandler/: __init__.py  definitions.py  handler.py  handlerconfig.py  memorystore.py
src/xaihandler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_handler.py  test_memory.py  test_personality.py
